# CTorch

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  README.md  main.cpp  main_2.cpp  main_backup.cpp  mymodel.h  mymodel_2.h  test.cpp
Data/: DataLoader.cpp  DataLoader.h  DataSet.cpp  DataSet.h
DataType/: Tensor.cpp  Tensor.h
Function/: CrossEntropy.cpp  CrossEntropy.h  LossFunction.h
Layers/: ConvolutionLayer.cpp  ConvolutionLayer.h  LinearLayer.cpp  LinearLayer.h  Module.h  ReLU.cpp  ReLU.h  activation.cpp  activation.h  model.cpp  model.h  test.cpp
Network/: Network.h
Optimizer/: Adam.cpp  Adam.h  Optimizer.h  SGD.cpp  SGD.h
